crates/viewer/re_blueprint_tree/tests/snapshots/view_structure_test/query-to_the/non_root_origin.snap
---
source: crates/viewer/re_blueprint_tree/tests/view_structure_test.rs
expression: blueprint_tree_data
snapshot_kind: text
---
root_container:
  name:
    Placeholder: Grid container
  kind: Grid
  visible: true
  default_open: true
  children:
    - View:
        class_identifier: 3D
        name:
          Placeholder: path/to
        visible: true
        default_open: true
        origin_tree:
          kind: EntityPart
          entity_path:
            - path
            - to
          visible: true
          label: to
          highlight_sections:
            - start: 0
              end: 2
          default_open: true
          children:
            - kind: EntityPart
              entity_path:
                - path
                - to
                - the
              visible: true
              label: the
              highlight_sections:
                - start: 0
                  end: 3
              default_open: true
              children:
                - kind: EntityPart
                  entity_path:
                    - path
                    - to
                    - the
                    - void
                  visible: true
                  label: void
                  highlight_sections: []
                  default_open: true
                  children: []
        projection_trees: []
