crates/viewer/re_blueprint_tree/tests/snapshots/view_structure_test/query-to_the/root_origin.snap
---
source: crates/viewer/re_blueprint_tree/tests/view_structure_test.rs
expression: blueprint_tree_data
---
root_container:
  name:
    Placeholder: Grid
  kind: Grid
  visible: true
  default_open: true
  children:
    - View:
        class_identifier: 3D
        name:
          Placeholder: /
        visible: true
        default_open: true
        origin_tree:
          kind: EntityPart
          entity_path: []
          visible: true
          label: / (root)
          highlight_sections: []
          default_open: true
          children:
            - kind: EntityPart
              entity_path:
                - path
              visible: true
              label: path
              highlight_sections: []
              default_open: true
              children:
                - kind: EntityPart
                  entity_path:
                    - path
                    - onto
                  visible: true
                  label: onto
                  highlight_sections:
                    - start: 2
                      end: 4
                  default_open: true
                  children:
                    - kind: EntityPart
                      entity_path:
                        - path
                        - onto
                        - their
                      visible: true
                      label: their
                      highlight_sections:
                        - start: 0
                          end: 3
                      default_open: true
                      children:
                        - kind: EntityPart
                          entity_path:
                            - path
                            - onto
                            - their
                            - coils
                          visible: true
                          label: coils
                          highlight_sections: []
                          default_open: true
                          children: []
                - kind: EntityPart
                  entity_path:
                    - path
                    - to
                  visible: true
                  label: to
                  highlight_sections:
                    - start: 0
                      end: 2
                  default_open: true
                  children:
                    - kind: EntityPart
                      entity_path:
                        - path
                        - to
                        - the
                      visible: true
                      label: the
                      highlight_sections:
                        - start: 0
                          end: 3
                      default_open: true
                      children:
                        - kind: EntityPart
                          entity_path:
                            - path
                            - to
                            - the
                            - void
                          visible: true
                          label: void
                          highlight_sections: []
                          default_open: true
                          children: []
        projection_trees: []
